Cập nhật code mới

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,7 @@
             "ESNext"
         ],
         "jsx": "react-jsx",
+        "jsxImportSource": "react",
         "strict": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
