--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "bcryptjs": "^2.4.3",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -22,6 +23,7 @@
         "pg": "^8.16.3"
     },
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/bcryptjs": "^2.4.6",
         "@types/cookie-parser": "^1.4.9",
         "@types/cors": "^2.8.19",
